added favicon and preview cards

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
+    <meta name="description" content="For Your Consideration: Tess Remy-Schumacher's Album - Remembrance & Renewal" />
     <meta name="author" content="" />
     <title>Tess Remy-Schumacher - Cello - FYC</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!--Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon_io/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- Primary Meta Tags -->
+    <title>For Your Consideration: Tess Remy-Schumacher's Album - "Remembrance & Renewal"</title>
+    <meta name="title" content="For Your Consideration: Tess Remy-Schumacher's Album - 'Remembrance & Renewal'" />
+    <meta name="description" content="This album Remembrance and Renewal evolved after a long phase of incredible losses among our family and friends. It seeks a healing way to transform grief musically into loving memories while honoring loved ones, celebrating their lives and finding peace in remembrance." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="For Your Consideration: Tess Remy-Schumacher's Album - "Remembrance & Renewal"" />
+    <meta property="og:description" content="This album Remembrance and Renewal evolved after a long phase of incredible losses among our family and friends. It seeks a healing way to transform grief musically into loving memories while honoring loved ones, celebrating their lives and finding peace in remembrance." />
+    <meta property="og:image" content="assets/images/album-cover-cropped.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="For Your Consideration: Tess Remy-Schumacher's Album - "Remembrance & Renewal"" />
+    <meta property="twitter:description" content="This album Remembrance and Renewal evolved after a long phase of incredible losses among our family and friends. It seeks a healing way to transform grief musically into loving memories while honoring loved ones, celebrating their lives and finding peace in remembrance." />
+    <meta property="twitter:image" content="assets/images/album-cover-cropped.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
