fixed incorrect audio tags

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <p class="track-info">Adam Barrett Berry, Composer; Tess Remy-Schumacher, Cello; Vivian Fang Liu, Piano
                 </p>
                 <audio controls>
-                    <source src="assets/audio/TESS_1_Berry_Remembrance and Renewal.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_1_Berry_Remembrance and Renewal.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <hr class="mt-2">
@@ -149,7 +149,7 @@
                 <p class="track-title"><em>Elegy</em></p>
                 <p class="track-info">Connor Chee, Composer; Tess Remy-Schumacher, Cello; Connor Chee, Piano</p>
                 <audio controls>
-                    <source src="assets/audio/TESS_2_Chee_Elegy.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_2_Chee_Elegy.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <hr class="mt-2">
@@ -159,7 +159,7 @@
                     Fang Liu, Piano</p>
 
                 <audio controls>
-                    <source src="assets/audio/TESS_3_Finneas_When the Partys Over.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_3_Finneas_When the Partys Over.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <hr class="mt-2">
@@ -168,7 +168,7 @@
                 <p class="track-info">Zachary C. Daniels, Composer; Tess Remy-Schumacher, Cello; Vivian Fang Liu, Piano
                 </p>
                 <audio controls>
-                    <source src="assets/audio/TESS_4_Daniels_Lullaby.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_4_Daniels_Lullaby.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <hr class="mt-2">
@@ -178,7 +178,7 @@
                 <p class="track-info">Samuel Magrill, Composer; Robert Glaubitz, Baritone; Tess Remy-Schumacher, Cello
                 </p>
                 <audio controls>
-                    <source src="assets/audio/TESS_5_Magrill_Utitia.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_5_Magrill_Utitia.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <hr class="mt-2">
@@ -187,7 +187,7 @@
                 <p class="track-title"><em>Song of the Birds</em></p>
                 <p class="track-info">Pablo Casals, Composer; Tess Remy-Schumacher, Cello; Vivian Fang Liu, Piano</p>
                 <audio controls>
-                    <source src="assets/audio/TESS_6_Casals_Song of the Birds.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_6_Casals_Song of the Birds.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <hr class="mt-2">
@@ -197,7 +197,7 @@
                 <p class="track-info">Michael Staudt, Composer; Christina Giacona, Clarinet; Hong Zhu and Patrick
                     Conlon, Violin; Vivian Fang Liu, Piano; Tess Remy-Schumacher, Cello; Chris Prather, Conductor</p>
                 <audio controls>
-                    <source src="assets/audio/TESS_7_In Memorium.mp3" type="audio/ogg">
+                    <source src="assets/audio/TESS_7_In Memorium.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
 
