updated formatting and fixed typos in Special Thanks section

--- a/index.html
+++ b/index.html
@@ -443,15 +443,13 @@
                     I am deeply grateful to my husband David for his constant love and support always! This album is
                     dedicated to you!
 
-                    Sincere thanks to my friends who contributed much time and heart for “Remembrance and Renewal”:
+                    <p>Sincere thanks to my friends who contributed much time and heart for “Remembrance and Renewal”:</p>
 
-                    Producers, editors, recording engineers and musicians Christina Giacona and Patrick Conlon.
+                    <p>Producers, editors, recording engineers and musicians Christina Giacona and Patrick Conlon.
 
                     Chamber music partners:
-                </p>
-                <p>Producers, editors, recording engineers and musicians Christina Giacona and Patrick Conlon.
-
-                    Chamber music partners: Connor Chee, Vivian Fang Liu, Christina Giacona, Hong Zhu, Patrick Conlon
+                
+                Connor Chee, Vivian Fang Liu, Christina Giacona, Hong Zhu, Patrick Conlon
                     and Robert Glaubitz.
 
                     Conductor/composer Chris Prather, and composers Adam Barrett Berry, Connor Chee, Finneas O’Connell,
