changed the layout of the page a bit

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 <h2 class="mb-3 header-text">Best Classical Compendium</h2>
                 <img class="album-cover img-fluid border" src="assets/images/album-cover.jpeg">
                 <h2 class="mt-3 header-text"><em>Remembrance & Renewal</em></h2>
-                <h3 class="mt-0 header-text">Tess Remy-Schumacher & Friends</h3>
-                <h4 class="header-text mt-4">Original Cover Art - Gloria Domina</h4>
+                <h3 class="header-text">Tess Remy-Schumacher & Friends</h3>
+                <h4 class="header-text mt-1">Original Cover Art - Gloria Domina</h4>
                 <hr>
-                <a class="btn btn-primary btn-xl rounded-pill mt-1 mb-2" href="#listen">Listen</a>
+                <a class="btn btn-primary btn-xl rounded-pill mt-1" href="#listen">Listen</a>
 
 
             </div>
@@ -88,7 +88,7 @@
 
         <div class="container background-1">
             <div id="album-notes" class="row ">
-                <h2 class="display-6 mt-3"><em>Album Notes</em></h2>
+                <h2 class="display-6 mt-5"><em>Album Notes</em></h2>
                 <hr>
                 <p>Last year this album Remembrance and Renewal evolved after a long phase of incredible losses
                     among our family and friends. It seeks a healing way to transform grief musically into
@@ -213,7 +213,7 @@
     <!-- Content section 2-->
     <section>
         <div class="container ">
-            <div id="track-notes" class="row ">
+            <div id="track-notes" class="row">
                 <h2 class="display-6 mt-5"><em>Track Notes</em></h2>
                 <hr>
                 <!--Track Remembrance and Renewal-->
@@ -224,7 +224,7 @@
                     <figure class="caption-text">Premiere of Adam Berry’s Remembrance and Renewal
                         at Carnegie Recital Hall New York with pianist Vivian Fang Liu</figure>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 mt-3">
                     <h3><em>Remembrance & Renewal</em></h3>
                     <p>Adam Barrett Berry called his composition and the album’s title song <strong><em>Remembrance
                                 and Renewal</em></strong> a “…bittersweet longing for what was lost, but only as a
@@ -236,7 +236,7 @@
             </div>
             <!--end Track Remembrance and Renewal-->
             <!--Track Elegy-->
-            <div class="row ">
+            <div class="row">
                 <div class="col-lg-4">
 
                     <h3><em>Elegy</em></h3>
@@ -259,13 +259,13 @@
             <!--end Track Elegy-->
             <!--Track When the Party's Over-->
             <div class="row  align-items-center">
-                <div class="col-lg-4">
+                <div class="col-lg-5">
                     <div class="mb-2"><img class="img-fluid rounded" src="assets/images/with-vivian-fang-liu.png"
                             alt="Tess Remy-Schumacher and Vivian Fang Liu after rehearsal" />
                     </div>
                     <figure class="caption-text">Rehearsal with Vivian Fang Liu</figure>
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-7">
 
                     <h3><em>When the Party’s Over</em></h3>
                     <p>First hearing Billie Eilish’s and Finneas O’Connell’s performance of <strong><em>When the Party’s
@@ -274,14 +274,17 @@
                         concept.
 
                     </p>
-
-
-
+                    <h3><em>Lullaby</em></h3>
+                    <p>Last year Zachary Daniels completed <strong><em>Lullaby</em></strong> for his son Oliver in a
+                        cello and piano version for this album, truly expressing a new beginning of this new life with
+                        beautiful melodies.
+                    </p>
+                    
                 </div>
             </div>
             <!--end Track When the Party's Over-->
             <!--Track Lullaby-->
-            <div class="row  align-items-center">
+            <!-- <div class="row  align-items-center">
                 <div class="col-lg-12">
 
                     <h3><em>Lullaby</em></h3>
@@ -294,18 +297,18 @@
 
                 </div>
                 
-            </div>
+            </div> -->
             <!--end Track Lullaby-->
 
             <div class="row  align-items-center">
                 <!--Track Utitia’q’s Song-->
-                <div class="col-lg-5">
+                <div class="col-lg-5 order-lg-2">
                     <div class="mb-2"><img class="img-fluid rounded" src="assets/images/with-robert-glaubitz.jpeg"
                             alt="Tess Remy-Schumacher and Robert Glaubitz." />
                     </div>
                     <figure class="caption-text">With Robert Glaubitz at Radke Fine Arts Theater, UCO</figure>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-7 order-lg-1">
 
                     <h3><em>Utitia’q’s Song </em></h3>
                     <p>Last summer while reading Native American songs and poems: an anthology / edited by Brian Swann,
@@ -334,11 +337,11 @@
                     </p>
 
 
-                </div>
+                 </div>
                 <!--end Track Song of the Birds-->
             </div>
 
-            <div class="row  align-items-center">
+            <div class="row">
                 <!--Track In Memoriam-->
                 <div class="col-lg-7">
                     <div class="mb-2"><img class="img-fluid rounded" src="assets/images/at-acm.jpeg"
