adjusted the padding at top of page and changed color of footer text

--- a/index.html
+++ b/index.html
@@ -466,9 +466,9 @@
     <!-- Footer-->
     <footer class="py-5 bg-primary">
         <div class="container ">
-            <p class="m-0 text-center text-white small">&copy; <span id="currentYear"></span> Tess Remy-Schumacher. All
+            <p class="m-0 text-center footer-text small">&copy; <span id="currentYear"></span> Tess Remy-Schumacher. All
                 rights reserved.</p>
-            <p class="m-0 text-center text-white small"><em>website made by <a class="footer-link" href="kadeebramlett.com"
+            <p class="m-0 text-center footer-text small"><em>website made by <a class="footer-link" href="kadeebramlett.com"
                     target="_blank">KaDee Bramlett</a></em></p>
 
         </div>
