--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="For Your Consideration: Tess Remy-Schumacher's Album - "Remembrance & Renewal"" />
+    <meta property="og:title" content="For Your Consideration: Tess Remy-Schumacher's Album - Remembrance & Renewal" />
     <meta property="og:description" content="This album Remembrance and Renewal evolved after a long phase of incredible losses among our family and friends. It seeks a healing way to transform grief musically into loving memories while honoring loved ones, celebrating their lives and finding peace in remembrance." />
     <meta property="og:image" content="assets/images/album-cover-cropped.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="For Your Consideration: Tess Remy-Schumacher's Album - "Remembrance & Renewal"" />
+    <meta property="twitter:title" content="For Your Consideration: Tess Remy-Schumacher's Album - Remembrance & Renewal" />
     <meta property="twitter:description" content="This album Remembrance and Renewal evolved after a long phase of incredible losses among our family and friends. It seeks a healing way to transform grief musically into loving memories while honoring loved ones, celebrating their lives and finding peace in remembrance." />
     <meta property="twitter:image" content="assets/images/album-cover-cropped.png" />
 
@@ -90,7 +90,7 @@
             <div id="album-notes" class="row ">
                 <h2 class="display-6 mt-5"><em>Album Notes</em></h2>
                 <hr>
-                <p>Last year this album Remembrance and Renewal evolved after a long phase of incredible losses
+                <p>Last year this album <em>Remembrance and Renewal</em> evolved after a long phase of incredible losses
                     among our family and friends. It seeks a healing way to transform grief musically into
                     loving memories while honoring loved ones, celebrating their lives and finding peace in
                     remembrance.</p>
@@ -221,7 +221,7 @@
                     <div class="mb-2"><img class="img-fluid rounded" src="assets/images/premiere-at-carnegie.jpeg"
                             alt="Tess Remy-Schumacher and Vivian Fang Liu performing at Carnegie Hall" />
                     </div>
-                    <figure class="caption-text">Premiere of Adam Berry’s Remembrance and Renewal
+                    <figure class="caption-text">Premiere of Adam Berry’s <em>Remembrance and Renewal</em>
                         at Carnegie Recital Hall New York with pianist Vivian Fang Liu</figure>
                 </div>
                 <div class="col-lg-6 mt-3">
@@ -445,19 +445,21 @@
                     I am deeply grateful to my husband David for his constant love and support always! This album is
                     dedicated to you!
                     
-                    <p>Sincere thanks to my friends who contributed much time and heart for “Remembrance and Renewal”:</p>
+                    <p>Sincere thanks to my friends who contributed much time and heart for <em>Remembrance and Renewal</em>:</p>
                     <div class="col-lg-7 order-lg-1">
                     <p>Producers, editors, recording engineers and musicians Christina Giacona and Patrick Conlon;
                     Chamber music partners: Connor Chee, Vivian Fang Liu, Christina Giacona, Hong Zhu, Patrick Conlon
                     and Robert Glaubitz;
                     Conductor/composer Chris Prather, and composers Adam Barrett Berry, Connor Chee, Finneas O’Connell,
                     Zachary Daniels, Samuel Magrill, Pablo Casals and Michael Staudt; Cover artist Gloria Domina and graphic designer Bryan Evans.</p>
+                    <p>This album marks a new beginning and RENEWAL of my musical journey.
+                        May <em>Remembrance and Renewal</em> provide healing power for everyone’s challenges in life.</p>
                     </div>
                     <div class="col-lg-5 order-lg-2">
 
                         <img class="img-fluid rounded" src="assets/images/younger-tess.jpeg"
                             alt="Tess Remy-Schumacher smiling with her cello." />
-                        <figure class="caption-text">Dr. Tess Remy-Schumacher</figure>
+                        <figure class="caption-text">First Lalo concerto for late loved ones who always believed in me is a dear REMEMBRANCE.</figure>
                     </div>
             </div>
         </div>
