rearranged text and photo at bottom of page per client's request

--- a/index.html
+++ b/index.html
@@ -438,29 +438,32 @@
     <section>
 
         <div class="container ">
-            <div id="thanks" class="row mb-3">
+            <div id="thanks" class="row mb-3 align-items-center">
                 <h2 class="display-6 mt-5"><em>Special Thanks</em></h2>
                 <hr>
                 <p>With gratitude...
                     I am deeply grateful to my husband David for his constant love and support always! This album is
                     dedicated to you!
                     
-                    <p>Sincere thanks to my friends who contributed much time and heart for <em>Remembrance and Renewal</em>:</p>
-                    <div class="col-lg-7 order-lg-1">
+                    <p>Sincere thanks to my friends who contributed much time and heart for <em>Remembrance and Renewal</em>”:</p>
+                    <div class="col-lg-8 order-lg-1">
                     <p>Producers, editors, recording engineers and musicians Christina Giacona and Patrick Conlon;
                     Chamber music partners: Connor Chee, Vivian Fang Liu, Christina Giacona, Hong Zhu, Patrick Conlon
                     and Robert Glaubitz;
                     Conductor/composer Chris Prather, and composers Adam Barrett Berry, Connor Chee, Finneas O’Connell,
                     Zachary Daniels, Samuel Magrill, Pablo Casals and Michael Staudt; Cover artist Gloria Domina and graphic designer Bryan Evans.</p>
-                    <p>This album marks a new beginning and RENEWAL of my musical journey.
-                        May <em>Remembrance and Renewal</em> provide healing power for everyone’s challenges in life.</p>
+                    
                     </div>
-                    <div class="col-lg-5 order-lg-2">
+                    <div class="col-lg-4 order-lg-2">
 
                         <img class="img-fluid rounded" src="assets/images/younger-tess.jpeg"
                             alt="Tess Remy-Schumacher smiling with her cello." />
-                        <figure class="caption-text">First Lalo concerto for late loved ones who always believed in me is a dear REMEMBRANCE.</figure>
-                    </div>
+                        <figure class="caption-text mb-0">First Lalo concerto for late loved ones who always believed in me is a dear REMEMBRANCE.</figure>  
+                    </div>       
+            </div>
+            <div class="col-lg-12">
+                <p>This album marks a new beginning and RENEWAL of my musical journey.
+                    May <em>Remembrance and Renewal</em> provide healing power for everyone’s challenges in life.</p>
             </div>
         </div>
     </section>
