--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                         <figure class="caption-text mb-0">First Lalo concerto for late loved ones who always believed in me is a dear REMEMBRANCE.</figure>  
                     </div>       
             </div>
-            <div class="col-lg-12">
+            <div class="col-lg-12 mb-5">
                 <p>This album marks a new beginning and RENEWAL of my musical journey.
                     May <em>Remembrance and Renewal</em> provide healing power for everyone’s challenges in life.</p>
             </div>
