changed styling at bottom of page

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
     <section>
 
         <div class="container ">
-            <div id="thanks" class="row mb-3 align-items-center">
+            <div id="thanks" class="row mb-3">
                 <h2 class="display-6 mt-5"><em>Special Thanks</em></h2>
                 <hr>
                 <p>With gratitude...
@@ -461,9 +461,10 @@
                         <figure class="caption-text mb-0">First Lalo concerto for late loved ones who always believed in me is a dear REMEMBRANCE.</figure>  
                     </div>       
             </div>
+            <hr>
             <div class="col-lg-12 mb-5">
-                <p>This album marks a new beginning and RENEWAL of my musical journey.
-                    May <em>Remembrance and Renewal</em> provide healing power for everyone’s challenges in life.</p>
+                <p class="final-wish text-center mt-4">This album marks a new beginning and RENEWAL of my musical journey.
+                    <br>May <em>Remembrance and Renewal</em> provide healing power for everyone’s challenges in life.</p>
             </div>
         </div>
     </section>
