fixed typos as requested by Tess

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             Remy-Schumacher</a></p>
                     <p><strong>Composers:</strong> <a href="https://www.adamberrycomposer.com/" target="_blank">Adam
                             Barrett Berry</a>, <a href="https://www.connorchee.com/" target="_blank">Connor Chee</a>,
-                        Billie Eilish/Finneas O’Connoll, <a href="https://zachdaniels.com" target="_blank">Zachary C.
+                        Billie Eilish/Finneas O’Connell, <a href="https://zachdaniels.com" target="_blank">Zachary C.
                             Daniels</a>, <a href="https://www3.uco.edu/centraldirectory/profiles/5894"
                             target="_blank">Samuel Magrill</a>, Pablo Casals, and Michael Staudt</p>
                     <p><strong>Featured Soloist:</strong> <a href="https://www3.uco.edu/centraldirectory/profiles/5999"
@@ -158,7 +158,7 @@
                 <hr class="mt-2">
                 <p class="track-info">TRACK 3</p>
                 <p class="track-title"><em>When the Party’s Over</em></p>
-                <p class="track-info">Billie Eilish/Finneas O’Connoll, Composers; Tess Remy-Schumacher, Cello; Vivian
+                <p class="track-info">Billie Eilish/Finneas O’Connell, Composers; Tess Remy-Schumacher, Cello; Vivian
                     Fang Liu, Piano</p>
 
                 <audio controls>
