Per Tess's request, updated the text for description of Berry's piece

--- a/index.html
+++ b/index.html
@@ -226,11 +226,7 @@
                 </div>
                 <div class="col-lg-6 mt-3">
                     <h3><em>Remembrance & Renewal</em></h3>
-                    <p>Adam Barrett Berry called his composition and the album’s title song <strong><em>Remembrance
-                                and Renewal</em></strong> a “…bittersweet longing for what was lost, but only as a
-                        small portion of the piece, more than that is the reflecting on the lovely experiences of
-                        knowing another human being to that depth….” Having commissioned this work, I am moved by
-                        its beauty. Its healing qualities musically expresses the essence of the album’s journey.
+                    <p>Adam Barrett Berry calls his composition and the album’s title song <strong><em>Remembrance and Renewal</em></strong>, a “…bittersweet longing for what was lost. But that’s only a small portion the piece. Primarily the piece is a series of poignant memories, reflecting on the profound joy of knowing and loving another human being so deeply.  This depth of love and of feeling is imprinted on your soul forever.“  Having commissioned this work, I am moved by its beauty. Its healing qualities musically expresses the essence of the album’s journey.
                     </p>
                 </div>
             </div>
