--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     I am deeply grateful to my husband David for his constant love and support always! This album is
                     dedicated to you!
                     
-                    <p>Sincere thanks to my friends who contributed much time and heart for <em>Remembrance and Renewal</em>”:</p>
+                    <p>Sincere thanks to my friends who contributed much time and heart for <em>Remembrance and Renewal</em>:</p>
                     <div class="col-lg-8 order-lg-1">
                     <p>Producers, editors, recording engineers and musicians Christina Giacona and Patrick Conlon;
                     Chamber music partners: Connor Chee, Vivian Fang Liu, Christina Giacona, Hong Zhu, Patrick Conlon
