fixed broken link and added alt text to album cover img

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <h1 class="h1 mb-0 header-text"><em>For Your Consideration</em></h1>
                 <h2 class="mb-3 header-text">Best Classical Compendium</h2>
-                <img class="album-cover img-fluid border" src="assets/images/album-cover.jpeg">
+                <img class="album-cover img-fluid border" src="assets/images/album-cover.jpeg" alt="album cover">
                 <h2 class="mt-3 header-text"><em>Remembrance & Renewal</em></h2>
                 <h3 class="header-text">Tess Remy-Schumacher & Friends</h3>
                 <h4 class="header-text mt-1">Original Cover Art - Gloria Domina</h4>
@@ -469,7 +469,7 @@
         <div class="container ">
             <p class="m-0 text-center footer-text small">&copy; <span id="currentYear"></span> Tess Remy-Schumacher. All
                 rights reserved.</p>
-            <p class="m-0 text-center footer-text small"><em>website made by <a class="footer-link" href="kadeebramlett.com"
+            <p class="m-0 text-center footer-text small"><em>website made by <a class="footer-link" href="https://kadeebramlett.com/"
                     target="_blank">KaDee Bramlett</a></em></p>
 
         </div>
